<package>
  <name>roomba_robin_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo launchers and worlds for TurtleBot simulation with JKU Stack</description>
  <maintainer email="stephan.hofstaetter@gmail.com">Stephan Hofstaetter</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_gazebo</url>
  <url type="repository">https://github.com/robinJKU/roomba_robin_simulator</url>
  <url type="bugtracker">https://github.com/robinJKU/roomba_robin_simulator/issues</url>
  <author email="stephan.hofstaetter@gmail.com">Stephan Hofstaetter</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>create_gazebo_plugins</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>roomba_robin_bringup</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>roomba_robin_description</run_depend>
  <run_depend>xacro</run_depend>
</package>
